--- a/project.yml
+++ b/project.yml
@@ -23,7 +23,9 @@ configs:
 
 settings:
   base:
+   # PRODUCT_NAME: IkigaiDemo
     BUNDLE_ID_PREFIX: com.45bitstudios
+    ASSETCATALOG_COMPILER_APPICON_NAME: ikigai-main
     BUNDLE_NAME: ikigaiapp2
     SWIFT_VERSION: 6.2
     MARKETING_VERSION: 1.0.0
@@ -40,6 +42,7 @@ targets:
       iOS: 26.0
     sources:
       - path: IkigaiApp
+      - path: Resources
     dependencies:
       - package: IkigaiApi
         product: IkigaiCore
@@ -89,6 +92,7 @@ targets:
       iOS: 26.0
     sources:
       - path: AppClips
+      - path: Resources
     settings:
       PRODUCT_BUNDLE_IDENTIFIER: $(BUNDLE_ID_PREFIX).$(BUNDLE_NAME).Clip
       TARGETED_DEVICE_FAMILY: 1,2
@@ -102,6 +106,7 @@ targets:
       iOS: 26.0
     sources:
       - path: ActionExtension
+      #- path: Resources
     dependencies:
       - package: IkigaiApi
         product: IkigaiCore
@@ -126,6 +131,7 @@ targets:
       iOS: 26.0
     sources:
       - path: ShareExtension
+      #- path: Resources
     dependencies:
       - package: IkigaiApi
         product: IkigaiCore
@@ -150,6 +156,7 @@ targets:
       iOS: 26.0
     sources:
       - path: NotificationExtension
+      #- path: Resources
     dependencies:
       - package: IkigaiApi
         product: IkigaiCore
@@ -174,6 +181,7 @@ targets:
       iOS: 26.0
     sources:
       - path: NotificationServiceExtension
+     # - path: Resources
     settings:
       base:
         ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES: ${inherited}
@@ -196,6 +204,7 @@ targets:
       iOS: 26.0
     sources:
       - path: MessageExtension
+      #- path: Resources
     settings:
       base:
         ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES: ${inherited}
@@ -241,6 +250,7 @@ targets:
       iOS: 26.0
     sources:
       - path: WidgetExtension
+     # - path: Resources
     dependencies:
       - package: IkigaiApi
         product: IkigaiCore
@@ -265,6 +275,7 @@ targets:
       watchOS: 26.0
     sources:
       - path: WatchApp
+      - path: Resources
     dependencies:
       - package: IkigaiApi
         product: IkigaiCore
