--- a/project.yml
+++ b/project.yml
@@ -26,7 +26,7 @@ settings:
    # PRODUCT_NAME: IkigaiDemo
     BUNDLE_ID_PREFIX: com.45bitstudios
     ASSETCATALOG_COMPILER_APPICON_NAME: ikigai-main
-    BUNDLE_NAME: ikigaiapp2
+    BUNDLE_NAME: ikigaiapp3
     SWIFT_VERSION: 6.2
     MARKETING_VERSION: 1.0.0
     CURRENT_PROJECT_VERSION: 1
@@ -42,7 +42,9 @@ targets:
       iOS: 26.0
     sources:
       - path: IkigaiApp
-      - path: Resources
+    resources:
+      - path: Resources/Assets.xcassets
+      - path: Resources/ikigai-main.icon
     dependencies:
       - package: IkigaiApi
         product: IkigaiCore
