--- a/project.yml
+++ b/project.yml
@@ -71,6 +71,7 @@ targets:
     settings:
       base:
         PRODUCT_BUNDLE_IDENTIFIER: $(BUNDLE_ID_PREFIX).$(BUNDLE_NAME)
+        ASSETCATALOG_COMPILER_APPICON_NAME: $(ASSETCATALOG_COMPILER_APPICON_NAME)
         TARGETED_DEVICE_FAMILY: 1,2,3,4,7
         SWIFT_EMIT_LOC_STRINGS: YES
         ENABLE_PREVIEWS: YES
