--- a/Ikigai.xcodeproj/xcshareddata/xcschemes/IkigaiApp.xcscheme
+++ b/Ikigai.xcodeproj/xcshareddata/xcschemes/IkigaiApp.xcscheme
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1430"
-   version = "1.7">
+   version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
-      buildImplicitDependencies = "YES"
-      runPostActionsOnFailure = "NO">
+      buildImplicitDependencies = "YES">
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
@@ -16,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "002117392B9D54E87C97883D"
-               BuildableName = "IkigaiApp.app"
+               BuildableName = "Ikigai - Demo and Package.app"
                BlueprintName = "IkigaiApp"
                ReferencedContainer = "container:Ikigai.xcodeproj">
             </BuildableReference>
@@ -27,13 +26,12 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      onlyGenerateCoverageForSpecifiedTargets = "NO">
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "002117392B9D54E87C97883D"
-            BuildableName = "IkigaiApp.app"
+            BuildableName = "Ikigai - Demo and Package.app"
             BlueprintName = "IkigaiApp"
             ReferencedContainer = "container:Ikigai.xcodeproj">
          </BuildableReference>
@@ -50,8 +48,6 @@
             </BuildableReference>
          </TestableReference>
       </Testables>
-      <CommandLineArguments>
-      </CommandLineArguments>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -68,13 +64,11 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "002117392B9D54E87C97883D"
-            BuildableName = "IkigaiApp.app"
+            BuildableName = "Ikigai - Demo and Package.app"
             BlueprintName = "IkigaiApp"
             ReferencedContainer = "container:Ikigai.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <CommandLineArguments>
-      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -87,7 +81,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "002117392B9D54E87C97883D"
-            BuildableName = "IkigaiApp.app"
+            BuildableName = "Ikigai - Demo and Package.app"
             BlueprintName = "IkigaiApp"
             ReferencedContainer = "container:Ikigai.xcodeproj">
          </BuildableReference>
