--- a/project.yml
+++ b/project.yml
@@ -12,9 +12,10 @@ options:
 
 packages:
   IkigaiApi:
-    path: .
+    # path: .
     # To switch to remote package, replace above with:
-    # url: https://github.com/vinced45/xcode-template.git
+    url: https://github.com/45BitStudios/Ikigai.git
+    branch: main
     # revision: cfbf00e
 
 configs:
@@ -27,6 +28,8 @@ settings:
     BUNDLE_ID_PREFIX: com.45bitstudios
     ASSETCATALOG_COMPILER_APPICON_NAME: ikigai-main
     BUNDLE_NAME: ikigaiapp3
+    PRODUCT_MODULE_NAME: $(TARGET_NAME)
+    PRODUCT_APP_NAME: Ikigai - Demo and Package # For Xcode Cloud App Creation
     SWIFT_VERSION: 6.2
     MARKETING_VERSION: 1.0.0
     CURRENT_PROJECT_VERSION: 1
@@ -72,6 +75,7 @@ targets:
       base:
         PRODUCT_BUNDLE_IDENTIFIER: $(BUNDLE_ID_PREFIX).$(BUNDLE_NAME)
         ASSETCATALOG_COMPILER_APPICON_NAME: $(ASSETCATALOG_COMPILER_APPICON_NAME)
+        PRODUCT_NAME: $(PRODUCT_APP_NAME)
         TARGETED_DEVICE_FAMILY: 1,2,3,4,7
         SWIFT_EMIT_LOC_STRINGS: YES
         ENABLE_PREVIEWS: YES
