--- a/project.yml
+++ b/project.yml
@@ -26,7 +26,7 @@ settings:
   base:
    # PRODUCT_NAME: IkigaiDemo
     BUNDLE_ID_PREFIX: com.45bitstudios
-    ASSETCATALOG_COMPILER_APPICON_NAME: ikigai-main
+    ASSETCATALOG_COMPILER_APPICON_NAME: AppIcon
     BUNDLE_NAME: ikigaiapp3
     PRODUCT_MODULE_NAME: $(TARGET_NAME)
     PRODUCT_APP_NAME: Ikigai - Demo and Package # For Xcode Cloud App Creation
@@ -76,13 +76,17 @@ targets:
         PRODUCT_BUNDLE_IDENTIFIER: $(BUNDLE_ID_PREFIX).$(BUNDLE_NAME)
         ASSETCATALOG_COMPILER_APPICON_NAME: $(ASSETCATALOG_COMPILER_APPICON_NAME)
         PRODUCT_NAME: $(PRODUCT_APP_NAME)
-        TARGETED_DEVICE_FAMILY: 1,2,3,4,7
+        TARGETED_DEVICE_FAMILY: 1,2,3,7
         SWIFT_EMIT_LOC_STRINGS: YES
         ENABLE_PREVIEWS: YES
         SUPPORTED_PLATFORMS: "iphoneos iphonesimulator macosx appletvsimulator appletvos xros xrsimulator"
         SUPPORTS_MACCATALYST: NO
         SUPPORTS_MAC_DESIGNED_FOR_IPHONE_IPAD: NO
         CODE_SIGN_ENTITLEMENTS: IkigaiApp/IkigaiApp.entitlements
+        SWIFT_ACTIVE_COMPILATION_CONDITIONS: DEBUG
+        OTHER_SWIFT_FLAGS: [
+          "-Xfrontend", "-enable-experimental-feature", "-Xfrontend", "Macros"
+        ]
       configs:
         Debug:
           ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES[sdk=iphoneos*]: $(inherited)
@@ -90,7 +94,9 @@ targets:
         Release:
           ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES[sdk=iphoneos*]: $(inherited)
           ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES[sdk=iphonesimulator*]: $(inherited)
-
+    swiftMacros:
+      - target: IkigaiAPI
+        product: IkigaiMacroPlugin
   # App Clips Target
   AppClips:
     type: application
