--- a/project.yml
+++ b/project.yml
@@ -25,6 +25,7 @@ configs:
 settings:
   base:
    # PRODUCT_NAME: IkigaiDemo
+    DISPLAY_NAME: Ikigai
     BUNDLE_ID_PREFIX: com.45bitstudios
     ASSETCATALOG_COMPILER_APPICON_NAME: AppIcon
     BUNDLE_NAME: ikigaiapp3
@@ -71,6 +72,45 @@ targets:
         embed: true
       - target: WidgetExtension
         embed: true
+    info:
+      path: IkigaiApp/Info.plist
+      properties:
+        CFBundleDisplayName: $(DISPLAY_NAME)
+        CFBundleShortVersionString: $(MARKETING_VERSION)
+        CFBundleVersion: $(CURRENT_PROJECT_VERSION)
+        properties:
+        CFBundleIcons:
+          CFBundlePrimaryIcon:
+          CFBundleIconFiles: []
+          UIPrerenderedIcon: false
+          NSAppIconActionTintColorName: ShortcutsForeground
+          NSAppIconComplementingColorNames:
+            - ShortcutsBackground1
+            - ShortcutsBackground2
+            
+        NSAppClipRequestEphemeralUserNotification: false
+        NSAppClipRequestLocationConfirmation: false
+
+        NSMicrophoneUsageDescription: "This app requires microphone access for voice features"
+        NSUserNotificationsUsageDescription: "This app uses notifications to keep you updated with important information and alerts"
+
+        UIBackgroundModes:
+          - remote-notification
+          - background-fetch
+          - background-processing
+
+        UILaunchScreen: {}
+
+        UISupportedInterfaceOrientations:
+          - UIInterfaceOrientationPortrait
+          - UIInterfaceOrientationLandscapeLeft
+          - UIInterfaceOrientationLandscapeRight
+
+        UISupportedInterfaceOrientations~ipad:
+          - UIInterfaceOrientationPortrait
+          - UIInterfaceOrientationPortraitUpsideDown
+          - UIInterfaceOrientationLandscapeLeft
+          - UIInterfaceOrientationLandscapeRight
     settings:
       base:
         PRODUCT_BUNDLE_IDENTIFIER: $(BUNDLE_ID_PREFIX).$(BUNDLE_NAME)
@@ -106,6 +146,15 @@ targets:
     sources:
       - path: AppClips
       - path: Resources
+    info:
+      path: AppClips/Info.plist
+      properties:
+        CFBundleDisplayName: $(DISPLAY_NAME) Clip
+        CFBundleShortVersionString: $(MARKETING_VERSION)
+        CFBundleVersion: $(CURRENT_PROJECT_VERSION)
+        NSAppClip:
+          NSAppClipRequestEphemeralUserNotification: false
+          NSAppClipRequestLocationConfirmation: false
     settings:
       PRODUCT_BUNDLE_IDENTIFIER: $(BUNDLE_ID_PREFIX).$(BUNDLE_NAME).Clip
       TARGETED_DEVICE_FAMILY: 1,2
@@ -123,6 +172,20 @@ targets:
     dependencies:
       - package: IkigaiApi
         product: IkigaiCore
+    info:
+      path: ActionExtension/Info.plist
+      properties:
+        CFBundleDisplayName: $(DISPLAY_NAME)
+        CFBundleShortVersionString: $(MARKETING_VERSION)
+        CFBundleVersion: $(CURRENT_PROJECT_VERSION)
+        NSExtension:
+          NSExtensionAttributes:
+            NSExtensionActivationRule:
+              NSExtensionActivationDictionaryVersion: 2
+              NSExtensionActivationSupportsAttachmentsWithMaxCount: 1
+              NSExtensionActivationSupportsImageWithMaxCount: 1
+          NSExtensionPointIdentifier: com.apple.ui-services
+          NSExtensionPrincipalClass: $(PRODUCT_MODULE_NAME).ActionHostingController
     settings:
       base:
         ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES: ${inherited}
@@ -148,6 +211,20 @@ targets:
     dependencies:
       - package: IkigaiApi
         product: IkigaiCore
+    info:
+      path: ShareExtension/Info.plist
+      properties:
+        CFBundleDisplayName: $(DISPLAY_NAME)
+        CFBundleShortVersionString: $(MARKETING_VERSION)
+        CFBundleVersion: $(CURRENT_PROJECT_VERSION)
+        NSExtension:
+          NSExtensionAttributes:
+            NSExtensionActivationRule:
+              NSExtensionActivationDictionaryVersion: 2
+              NSExtensionActivationSupportsAttachmentsWithMaxCount: 1
+              NSExtensionActivationSupportsImageWithMaxCount: 1
+          NSExtensionPointIdentifier: com.apple.share-services
+          NSExtensionPrincipalClass: $(PRODUCT_MODULE_NAME).ShareHostingController
     settings:
       base:
         ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES: ${inherited}
@@ -173,6 +250,15 @@ targets:
     dependencies:
       - package: IkigaiApi
         product: IkigaiCore
+    info:
+      path: NotificationExtension/Info.plist
+      properties:
+        CFBundleDisplayName: $(DISPLAY_NAME)
+        CFBundleShortVersionString: $(MARKETING_VERSION)
+        CFBundleVersion: $(CURRENT_PROJECT_VERSION)
+        NSExtension:
+         NSExtensionPointIdentifier: com.apple.usernotifications.content-extension
+         NSExtensionPrincipalClass: $(PRODUCT_MODULE_NAME).NotificationHostingController
     settings:
       base:
         ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES: ${inherited}
@@ -195,6 +281,15 @@ targets:
     sources:
       - path: NotificationServiceExtension
      # - path: Resources
+    info:
+      path: NotificationServiceExtension/Info.plist
+      properties:
+        CFBundleDisplayName: $(DISPLAY_NAME)
+        CFBundleShortVersionString: $(MARKETING_VERSION)
+        CFBundleVersion: $(CURRENT_PROJECT_VERSION)
+        NSExtension:
+          NSExtensionPointIdentifier: com.apple.usernotifications.service
+          NSExtensionPrincipalClass: $(PRODUCT_MODULE_NAME).NotificationService
     settings:
       base:
         ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES: ${inherited}
@@ -218,6 +313,15 @@ targets:
     sources:
       - path: MessageExtension
       #- path: Resources
+    info:
+      path: MessageExtension/Info.plist
+      properties:
+        CFBundleDisplayName: $(DISPLAY_NAME)
+        CFBundleShortVersionString: $(MARKETING_VERSION)
+        CFBundleVersion: $(CURRENT_PROJECT_VERSION)
+        NSExtension:
+          NSExtensionPointIdentifier: com.apple.message-payload-provider
+          NSExtensionPrincipalClass: $(PRODUCT_MODULE_NAME).MessageHostingController
     settings:
       base:
         ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES: ${inherited}
@@ -242,6 +346,16 @@ targets:
     dependencies:
       - package: IkigaiApi
         product: IkigaiCore
+    info:
+      path: SpotlightExtension/Info.plist
+      properties:
+        CFBundleDisplayName: $(DISPLAY_NAME)
+        CFBundleShortVersionString: $(MARKETING_VERSION)
+        CFBundleVersion: $(CURRENT_PROJECT_VERSION)
+        CSExtensionLabel: SpotlightImporter
+        NSExtension:
+          NSExtensionPointIdentifier: com.apple.spotlight.importer
+          NSExtensionPrincipalClass: $(PRODUCT_MODULE_NAME).SpotlightHostingController
     settings:
       base:
         ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES: ${inherited}
@@ -267,6 +381,14 @@ targets:
     dependencies:
       - package: IkigaiApi
         product: IkigaiCore
+    info:
+      path: WidgetExtension/Info.plist
+      properties:
+        CFBundleDisplayName: $(DISPLAY_NAME)
+        CFBundleShortVersionString: $(MARKETING_VERSION)
+        CFBundleVersion: $(CURRENT_PROJECT_VERSION)
+        NSExtension:
+          NSExtensionPointIdentifier: com.apple.widgetkit-extension
     settings:
       base:
         ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES: ${inherited}
@@ -292,6 +414,14 @@ targets:
     dependencies:
       - package: IkigaiApi
         product: IkigaiCore
+    info:
+      path: WatchApp/Info.plist
+      properties:
+        CFBundleDisplayName: $(DISPLAY_NAME)
+        CFBundleShortVersionString: $(MARKETING_VERSION)
+        CFBundleVersion: $(CURRENT_PROJECT_VERSION)
+        WKApplication: true
+        WKCompanionAppBundleIdentifier: $(BUNDLE_ID_PREFIX).$(BUNDLE_NAME)
     settings:
       PRODUCT_BUNDLE_IDENTIFIER: $(BUNDLE_ID_PREFIX).$(BUNDLE_NAME).watchkitapp
       TARGETED_DEVICE_FAMILY: 4
